@@ -1,3 +1,8 @@
+Thu Mar 12 18:09:25 1998  Tom Yu  <tlyu@mit.edu>
+
+	* update_utmp.c (pty_update_utmp): Fix bogus entry of
+	PTY_LOGIN_PROCESS types on BSD-ish systems.
+
 Wed Feb 18 16:33:58 1998  Tom Yu  <tlyu@mit.edu>
 
 	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
